--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -6,7 +6,7 @@
 
     <div class="banner">
 
-        <img src="__STATIC__/index/imgs/bg.jpg" alt="">
+        <img src="__STATIC__/index/imgs/bg<?php echo rand(1,4); ?php>.jpg" alt="">
     </div>
 
     <div class="content">
