--- a/application/index/view/common/header.html
+++ b/application/index/view/common/header.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="baidu-site-verification" content="ZqVNluMJr0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{$blogDetail ? $blogDetail['seo_title'] : 'Naice的幻想世界' }</title>
