--- a/application/index/view/common/footer.html
+++ b/application/index/view/common/footer.html
@@ -8,7 +8,7 @@
 
             {foreach $footerBlogs as $vo}
 
-            <li><a href="/{$vo['id']}">{$vo['title']}</a></li>
+            <li><a href="/{$vo['id']}.html">{$vo['title']}</a></li>
 
             {/foreach}
 
