--- a/application/index/view/detail/index.html
+++ b/application/index/view/detail/index.html
@@ -46,7 +46,7 @@
 
                         }
 
-                        echo '<a href="/list/'.$tvo.'">'.$tvo.'</a>';
+                        echo '<a href="/list/'.$tvo.'.html">'.$tvo.'</a>';
 
                     }
 
