--- a/application/index/view/search/index.html
+++ b/application/index/view/search/index.html
@@ -40,7 +40,7 @@
 
                             }
 
-                            echo '<a href="/list/'.$tvo.'">'.$tvo.'</a>';
+                            echo '<a href="/list/'.$tvo.'.html">'.$tvo.'</a>';
 
                         }
 
@@ -48,7 +48,7 @@
 
                 」</h3>
 
-                <p><a href="/{$vo['id']}">{$vo['title']}</a></p>
+                <p><a href="/{$vo['id']}.html">{$vo['title']}</a></p>
 
             </li>
 
