--- a/application/index/view/common/header.html
+++ b/application/index/view/common/header.html
@@ -26,7 +26,7 @@
     <nav class="nav-list">
         <ul>
             {foreach $headerNav as $vo}
-            <li><a href="{$vo['url']}">{$vo['name']}</a></li>
+            <li><a href="{$vo['url'] == '/' ? $vo['url'] : $vo['url'].'.html'}">{$vo['name']}</a></li>
             {/foreach}
         </ul>
         <div class='blog-bar'>
