--- a/application/test/view/index/index2.html
+++ b/application/test/view/index/index2.html
@@ -15,6 +15,14 @@
 
 <script>
     paypal.Button.render({
+
+        style: {
+            layout: 'horizontal',  // horizontal | vertical
+            size:   'responsive',    // medium | large | responsive
+            shape:  'rect',      // pill | rect
+            color:  'gold'       // gold | blue | silver | black
+        },
+
         env: 'sandbox', // Or 'production'
         // Set up the payment:
         // 1. Add a payment callback
