--- a/application/test/view/index/index.html
+++ b/application/test/view/index/index.html
@@ -6,9 +6,13 @@
 </head>
 <body>
 <pre>
-    这是第一种支付方式
-    第二种支付方式
+    这是第一种支付方式PDT
     <a href="/test/index/index2">点击</a>
+
+    优点：快捷 方便
+    缺点：必须在前端检测才行
+
+    <img src="https://developer.paypal.com/img/docs/checkout/paypal-checkout-overview.svg" alt="">
 </pre>
 <script src="https://www.paypalobjects.com/api/checkout.js"></script>
 <div id="paypal-button-container"></div>
