--- a/application/index/view/common/footer.html
+++ b/application/index/view/common/footer.html
@@ -26,9 +26,9 @@
 
 </body>
 
-<script src="__STATIC__/index/js/lib/jquery-3.3.1.min.js"></script>
+<script src="__STATIC__/index/js/lib/jquery-3.3.1.min.js{$Think.config.app_v}"></script>
 
-<script src="__STATIC__/index/js/common.js"></script>
+<script src="__STATIC__/index/js/common.js{$Think.config.app_v}"></script>
 <script>
 var _hmt = _hmt || [];
 (function() {
