--- a/application/index/view/common/header.html
+++ b/application/index/view/common/header.html
@@ -8,15 +8,15 @@
     <title>{$blogDetail ? $blogDetail['seo_title'] : 'Naice的幻想世界' }</title>
     <meta name="keywords" content="{$blogDetail ? $blogDetail['seo_keywords'].',' : 'naice博客,' }pan233,盼,naice">
     <meta name="description" content="{$blogDetail ? $blogDetail['seo_description'] : 'naice个人博客，是一个技术学的很混乱的个人网站，误导小白成为大神之路。' }">
-    <link rel="stylesheet" href="__STATIC__/index/style/reset.css">
-    <link rel="stylesheet" href="__STATIC__/index/style/typo.css">
-    <link rel="stylesheet" href="__STATIC__/index/style/common.css">
-    <link rel="stylesheet" href="__STATIC__/index/style/media.css">
+    <link rel="stylesheet" href="__STATIC__/index/style/reset.css{$Think.config.app_v}">>
+    <link rel="stylesheet" href="__STATIC__/index/style/typo.css{$Think.config.app_v}">>
+    <link rel="stylesheet" href="__STATIC__/index/style/common.css{$Think.config.app_v}">>
+    <link rel="stylesheet" href="__STATIC__/index/style/media.css{$Think.config.app_v}">>
 </head>
 <!-- 兼容IE9以下 -->
 <!--[if lt IE 9]>
-<script src="__STATIC__/index/js/lib/html5shiv.min.js"></script>
-<script src="__STATIC__/index/js/lib/respond.min.js"></script>
+<script src="__STATIC__/index/js/lib/html5shiv.min.js{$Think.config.app_v}"></script>
+<script src="__STATIC__/index/js/lib/respond.min.js{$Think.config.app_v}"></script>
 <![endif]-->
 <body>
 <header class="header">
