--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,6 +1,6 @@
 {include file="common/header" /}
 
-<link rel="stylesheet" href="__STATIC__/index/style/index.css">
+<link rel="stylesheet" href="__STATIC__/index/style/index.css{$Think.config.app_v}">>
 
 <div class="wrapper">
 
