--- a/application/index/view/common/header.html
+++ b/application/index/view/common/header.html
@@ -8,10 +8,10 @@
     <title>{$blogDetail ? $blogDetail['seo_title'] : 'Naice的幻想世界' }</title>
     <meta name="keywords" content="{$blogDetail ? $blogDetail['seo_keywords'].',' : 'naice博客,' }pan233,盼,naice">
     <meta name="description" content="{$blogDetail ? $blogDetail['seo_description'] : 'naice个人博客，是一个技术学的很混乱的个人网站，误导小白成为大神之路。' }">
-    <link rel="stylesheet" href="__STATIC__/index/style/reset.css{$Think.config.app_v}">>
-    <link rel="stylesheet" href="__STATIC__/index/style/typo.css{$Think.config.app_v}">>
-    <link rel="stylesheet" href="__STATIC__/index/style/common.css{$Think.config.app_v}">>
-    <link rel="stylesheet" href="__STATIC__/index/style/media.css{$Think.config.app_v}">>
+    <link rel="stylesheet" href="__STATIC__/index/style/reset.css{$Think.config.app_v}">
+    <link rel="stylesheet" href="__STATIC__/index/style/typo.css{$Think.config.app_v}">
+    <link rel="stylesheet" href="__STATIC__/index/style/common.css{$Think.config.app_v}">
+    <link rel="stylesheet" href="__STATIC__/index/style/media.css{$Think.config.app_v}">
 </head>
 <!-- 兼容IE9以下 -->
 <!--[if lt IE 9]>
