--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -6,7 +6,7 @@
 
     <div class="banner">
 
-        <img src="__STATIC__/index/imgs/bg<?php echo rand(1,4); ?>.jpg" alt="bg" title="bg">
+        <img src="__STATIC__/index/imgs/bg<?php echo rand(1,4); ?>.jpg" alt="bg" title="bg" onerror="javascript:this.style.display='none'">
     </div>
 
     <div class="content">
