--- a/application/index/view/common/header.html
+++ b/application/index/view/common/header.html
@@ -5,6 +5,7 @@
     <meta name="baidu-site-verification" content="ZqVNluMJr0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="360-site-verification" content="5dc3eb1a172a31e3bb28eb9f863223d8" />
     <title>{$blogDetail ? $blogDetail['seo_title'] : 'Naice的幻想世界' }</title>
     <meta name="keywords" content="{$blogDetail ? $blogDetail['seo_keywords'].',' : 'naice博客,' }pan233,盼,naice">
     <meta name="description" content="{$blogDetail ? $blogDetail['seo_description'] : 'naice个人博客，是一个技术学的很混乱的个人网站，误导小白成为大神之路。' }">
